--- a/.github/workflows/Build_oneplus_sm8750.yml
+++ b/.github/workflows/Build_oneplus_sm8750.yml
@@ -178,7 +178,7 @@ jobs:
       - name: 📥 Initialize repo and sync (初始化repo并同步内核源码)
         run: |
          mkdir kernel_workspace && cd kernel_workspace
-         repo init -u https://github.com/showdo/kernel_manifest.git -b refs/heads/oneplus/sm8750 -m ${REPO_MANIFEST}.xml --depth=1
+         repo init -u https://github.com/OnePlusOSS/kernel_manifest.git -b refs/heads/oneplus/sm8750 -m ${REPO_MANIFEST}.xml --depth=1
          repo --trace sync -c -j$(nproc --all) --no-tags
          rm kernel_platform/common/android/abi_gki_protected_exports_* || echo "No protected exports!"
          rm kernel_platform/msm-kernel/android/abi_gki_protected_exports_* || echo "No protected exports!"
@@ -190,16 +190,16 @@ jobs:
             
             curl -LSs "https://raw.githubusercontent.com/SukiSU-Ultra/SukiSU-Ultra/susfs-main/kernel/setup.sh" -o setup.sh && bash setup.sh susfs-main
             cd KernelSU
-            KSU_VERSION=$(expr $(git rev-list --count main 2>/dev/null || echo 13000) + 10700)
+            KSU_VERSION=$(expr $(/usr/bin/git rev-list --count main) "+" 10700)
             echo "KSUVER=$KSU_VERSION" >> $GITHUB_ENV
-             cp "${GITHUB_WORKSPACE}/.github/workflows/Bin/setup.bin" ./
-            chmod +x setup.bin
+            export KSU_VERSION=$KSU_VERSION
+            sed -i "s/DKSU_VERSION=12800/DKSU_VERSION=${KSU_VERSION}/" kernel/Makefile
             if [ ! -f "kernel/Makefile" ]; then
               echo "::error ::kernel/Makefile"
               ls -la
               exit 1
             fi
-            ./setup.bin
+
       - name: 🔧 Set up SUSFS (配置 SUSFS)
         run: |
            cd kernel_workspace
@@ -274,20 +274,44 @@ jobs:
           fi
           echo "HMBird补丁应用完成"
 
-          
+
       - name: 🔧 Set gki_defconfig (设置编译配置)
         env:
           ENABLE_B: ${{ github.event.inputs.enable_feature_b }}       
         run: |
           cd kernel_workspace/kernel_platform
+          
+          # 记录初始状态
+          git status --porcelain > /tmp/before.txt
+          
           cp "${GITHUB_WORKSPACE}/.github/workflows/Bin/main.bin" ./
           chmod +x main.bin
           ./main.bin "setup_gki_config"
           rm -rf ./main.bin
-          #Remove check_defconfig
-          sudo sed -i 's/check_defconfig//' ./common/build.config.gki
-          cd common
-          git add -A && git commit -a -m "BUILD Kernel"
+          
+          # 记录变化
+          git status --porcelain > /tmp/after.txt
+          echo "### Modified files:" >> $GITHUB_STEP_SUMMARY
+          diff /tmp/before.txt /tmp/after.txt | grep '^> ' | cut -c3- >> $GITHUB_STEP_SUMMARY
+          
+          # 显示每个修改文件的内容差异
+          echo "### File changes:" >> $GITHUB_STEP_SUMMARY
+          git diff --no-ext-diff >> $GITHUB_STEP_SUMMARY
+          
+      # - name: 🔧 Set gki_defconfig (设置编译配置)
+      #   env:
+      #     ENABLE_B: ${{ github.event.inputs.enable_feature_b }}       
+      #   run: |
+      #     cd kernel_workspace/kernel_platform
+      #     cp "${GITHUB_WORKSPACE}/.github/workflows/Bin/main.bin" ./
+      #     chmod +x main.bin
+      #     ./main.bin "setup_gki_config"
+      #     rm -rf ./main.bin
+          
+      #     #Remove check_defconfig
+      #     sudo sed -i 's/check_defconfig//' ./common/build.config.gki
+      #     cd common
+      #     git add -A && git commit -a -m "BUILD Kernel"
 
       - name: 🔧 Set Kernel name (设置内核名称)
         env:
