--- a/.github/workflows/Build_oneplus_sm8750.yml
+++ b/.github/workflows/Build_oneplus_sm8750.yml
@@ -101,8 +101,8 @@ jobs:
 
       - name: 📦 Configure Git (设置下载账户)
         run: |
-          git config --global user.name "Q1udaoyu"
-          git config --global user.email "sucisama2888@gmail.com"
+          git config --global user.name "521141"
+          git config --global user.email "github@521141.xyz"
 
       - name: 🛠 Configure APT caching (配置APT缓存)
         run: |
